fix: remove unused translations [CDS]
Signed-off-by: CDS <cds@ovh.net>

--- a/packages/manager/apps/telecom/src/app/telecom/pack/migration/translations/Messages_pl_PL.json
+++ b/packages/manager/apps/telecom/src/app/telecom/pack/migration/translations/Messages_pl_PL.json
@@ -45,13 +45,13 @@
   "telecom_pack_migration_add_domains_upto": "Ajoutez jusqu'à {{ max }} domaines",
   "telecom_pack_migration_domain_additional_text": "/domaine",
   "telecom_pack_migration_gtr_title": "GTR (si éligible)",
-  "telecom_pack_migration_gtr_4ho_available": "GTR 4HO dostępne",
-  "telecom_pack_migration_gtr_10ho_available": "GTR 10HO dostępne",
-  "telecom_pack_migration_gtr_5m_4ho_available": "GTR 4HO &amp; OPCJA KOMFORT 5M dostępny",
-  "telecom_pack_migration_gtr_5m_10ho_available": "GTR 10HO &amp; OPCJA KOMFORT 5M dostępny",
-  "telecom_pack_migration_gtr_20m_4ho_available": "GTR 4HO &amp; OPCJA KOMFORT 20M dostępny",
-  "telecom_pack_migration_gtr_20m_10ho_available": "GTR 10HO &amp; OPCJA KOMFORT 20M dostępny",
-  "telecom_pack_migration_gtr_add": "Dodaj ten GTR",
+  "telecom_pack_migration_gtr_4ho": "GTR 4HO ({{ price }} netto/m-c)",
+  "telecom_pack_migration_gtr_10ho": "GTR 10HO ({{ price }} netto/m-c)",
+  "telecom_pack_migration_gtr_5m_4ho": "GTR 4HO &amp; OPCJA KOMFORT 5M ({{ price }} netto/m-c)",
+  "telecom_pack_migration_gtr_5m_10ho": "GTR 10HO &amp; OPCJA KOMFORT 5M ({{ price }} netto/m-c)",
+  "telecom_pack_migration_gtr_20m_4ho": "GTR 4HO &amp; OPCJA KOMFORT 20M ({{ price }} netto/m-c)",
+  "telecom_pack_migration_gtr_20m_10ho": "GTR 10HO &amp; OPCJA KOMFORT 20M ({{ price }} netto/m-c)",
+  "telecom_pack_migration_no_gtr": "Brak GTR",
   "telecom_pack_migration_offer_choice": "Choix de l'offre",
   "telecom_pack_migration_offer_choice_error_loading": "Oups ! Nous ne parvenons pas à charger les offres disponibles pour votre pack.",
   "telecom_pack_migration_offer_choice_no_offers": "Aucun changement d'offre n'est disponible avec votre offre actuelle.",
@@ -176,17 +176,8 @@
   "telecom_pack_migration_modem_yes": "Chcę zamówić nowy modem ({{ price }} netto / m-c)",
   "telecom_pack_migration_modem_recycled": "Chcę skorzystać z modemu z recyklingu ({{ price }} netto / m-c)",
   "telecom_pack_migration_modem_no": "Nie chcę modemu",
-  "telecom_pack_migration_modem_required": "Wybór typu modemu jest obowiązkowy",
-  "telecom_pack_migration_confirm_modem_rental_yes": "Dzierżawa modemu",
-  "telecom_pack_migration_confirm_modem_rental_recycled": "Wynajem modemu z recyklingu",
-  "telecom_pack_migration_offers_debit_mention_1": "(1) Aż do 92 Mb/s łączących się w VDSL i 22 Mb/s w ADSL, w zależności od dostępności.",
-  "telecom_pack_migration_offers_debit_mention_2": "(2) Do 36 Mb/s w VDSL i 1 Mb/s w ADSL, w zależności od dostępności.",
   "telecom_pack_migration_modem_keep": "Chcę zachować mój modem ({{ price }} netto/m-c)",
-  "telecom_pack_migration_gtr_4ho": "GTR 4HO ({{ price }} netto/m-c)",
-  "telecom_pack_migration_gtr_10ho": "GTR 10HO ({{ price }} netto/m-c)",
-  "telecom_pack_migration_gtr_5m_4ho": "GTR 4HO &amp; OPCJA KOMFORT 5M ({{ price }} netto/m-c)",
-  "telecom_pack_migration_gtr_5m_10ho": "GTR 10HO &amp; OPCJA KOMFORT 5M ({{ price }} netto/m-c)",
-  "telecom_pack_migration_gtr_20m_4ho": "GTR 4HO &amp; OPCJA KOMFORT 20M ({{ price }} netto/m-c)",
-  "telecom_pack_migration_gtr_20m_10ho": "GTR 10HO &amp; OPCJA KOMFORT 20M ({{ price }} netto/m-c)",
-  "telecom_pack_migration_no_gtr": "Brak GTR"
+  "telecom_pack_migration_modem_required": "Wybór typu modemu jest obowiązkowy",
+  "telecom_pack_migration_offers_debit_mention_1": "(1) Aż do 92 Mb/s łączących się w VDSL i 22 Mb/s w ADSL, w zależności od dostępności.",
+  "telecom_pack_migration_offers_debit_mention_2": "(2) Do 36 Mb/s w VDSL i 1 Mb/s w ADSL, w zależności od dostępności."
 }
