--- a/packages/manager/apps/telecom/src/app/telecom/pack/migration/translations/Messages_pt_PT.json
+++ b/packages/manager/apps/telecom/src/app/telecom/pack/migration/translations/Messages_pt_PT.json
@@ -45,13 +45,13 @@
   "telecom_pack_migration_add_domains_upto": "Ajoutez jusqu'à {{ max }} domaines",
   "telecom_pack_migration_domain_additional_text": "/domaine",
   "telecom_pack_migration_gtr_title": "GTR (si éligible)",
-  "telecom_pack_migration_gtr_4ho_available": "GTR 4HO disponível",
-  "telecom_pack_migration_gtr_10ho_available": "GTR 10HO disponível",
-  "telecom_pack_migration_gtr_5m_4ho_available": "GTR 4HO &amp; OPTION CONFORT 5M disponível",
-  "telecom_pack_migration_gtr_5m_10ho_available": "GTR 10HO &amp; OPTION CONFORT 5M disponível",
-  "telecom_pack_migration_gtr_20m_4ho_available": "GTR 4HO &amp; OPTION CONFORT 20M disponível",
-  "telecom_pack_migration_gtr_20m_10ho_available": "GTR 10HO &amp; OPTION CONFORT 20M disponível",
-  "telecom_pack_migration_gtr_add": "Adicionar este GTR",
+  "telecom_pack_migration_gtr_4ho": "GTR 4HO ({{ price }} s/IVA/mês)",
+  "telecom_pack_migration_gtr_10ho": "GTR 10HO ({{ price }} s/IVA/mês)",
+  "telecom_pack_migration_gtr_5m_4ho": "GTR 4HO &amp; OPÇÃO CONFORT 5M ({{ price }}/mês + IVA)",
+  "telecom_pack_migration_gtr_5m_10ho": "GTR 10HO &amp; OPÇÃO CONFORT 5M ({{ price }}/mês + IVA)",
+  "telecom_pack_migration_gtr_20m_4ho": "GTR 4HO &amp; OPÇÃO CONFORT 20M ({{ price }}/mês + IVA)",
+  "telecom_pack_migration_gtr_20m_10ho": "GTR 10HO &amp; OPÇÃO CONFORT 20M ({{ price }}/mês + IVA)",
+  "telecom_pack_migration_no_gtr": "Nenhum GTR",
   "telecom_pack_migration_offer_choice": "Choix de l'offre",
   "telecom_pack_migration_offer_choice_error_loading": "Oups ! Nous ne parvenons pas à charger les offres disponibles pour votre pack.",
   "telecom_pack_migration_offer_choice_no_offers": "Aucun changement d'offre n'est disponible avec votre offre actuelle.",
@@ -152,6 +152,7 @@
   "telecom_pack_migration_pto_where_description": "Cette référence est inscrite sur le boîtier PTO et est composée de chiffres et de lettres sous la forme OO-XXXX-XXXX /C",
   "telecom_pack_migration_pto_yes_not_known": "J'ai un boîtier mais je ne connais pas son numéro",
   "telecom_pack_migration_promotion_installation_fees_offered": "Sem custos de instalação",
+  "telecom_pack_migration_confirm_modem_rental": "Locação modem",
   "telecom_pack_migration_confirm_provider_infra": "Custos suplementares",
   "telecom_pack_migration_confirm_comfort_activation": "As taxas de ativação da opção Confort são de {{ price }} + IVA",
   "telecom_pack_migration_confirm_install_fees": "As taxas de instalação são de {{ price }} + IVA",
@@ -162,18 +163,8 @@
   "telecom_pack_migration_modem_yes": "Pretendo escolher um modem nove ({{ price }} s/IVA/mês)",
   "telecom_pack_migration_modem_recycled": "Pretendo efetuar um modem reciclado ({{ price }} s/IVA/mês)",
   "telecom_pack_migration_modem_no": "Não desejo nenhum modem",
-  "telecom_pack_migration_modem_required": "A seleção de um tipo de modem é obrigatória",
-  "telecom_pack_migration_confirm_modem_rental_yes": "Locação modem nove",
-  "telecom_pack_migration_confirm_modem_rental_recycled": "Locação modem reciclada",
-  "telecom_pack_migration_offers_debit_mention_1": "(1) Até 92 Mb/s desceram em VDSL e 22 Mb/s em ADSL, consoante a elegibilidade.",
-  "telecom_pack_migration_offers_debit_mention_2": "(2) Até 36 Mb/s montante em VDSL e 1 Mb/s em ADSL, consoante a elegibilidade.",
   "telecom_pack_migration_modem_keep": "Desejo manter o meu modem ({{ price }} s/IVA/mês)",
-  "telecom_pack_migration_confirm_modem_rental": "Locação modem",
-  "telecom_pack_migration_gtr_4ho": "GTR 4HO ({{ price }} s/IVA/mês)",
-  "telecom_pack_migration_gtr_10ho": "GTR 10HO ({{ price }} s/IVA/mês)",
-  "telecom_pack_migration_gtr_5m_4ho": "GTR 4HO &amp; OPÇÃO CONFORT 5M ({{ price }}/mês + IVA)",
-  "telecom_pack_migration_gtr_5m_10ho": "GTR 10HO &amp; OPÇÃO CONFORT 5M ({{ price }}/mês + IVA)",
-  "telecom_pack_migration_gtr_20m_4ho": "GTR 4HO &amp; OPÇÃO CONFORT 20M ({{ price }}/mês + IVA)",
-  "telecom_pack_migration_gtr_20m_10ho": "GTR 10HO &amp; OPÇÃO CONFORT 20M ({{ price }}/mês + IVA)",
-  "telecom_pack_migration_no_gtr": "Nenhum GTR"
+  "telecom_pack_migration_modem_required": "A seleção de um tipo de modem é obrigatória",
+  "telecom_pack_migration_offers_debit_mention_1": "(1) Até 92 Mb/s desceram em VDSL e 22 Mb/s em ADSL, consoante a elegibilidade.",
+  "telecom_pack_migration_offers_debit_mention_2": "(2) Até 36 Mb/s montante em VDSL e 1 Mb/s em ADSL, consoante a elegibilidade."
 }
