--- a/packages/manager/apps/telecom/src/app/telecom/pack/move/translations/Messages_de_DE.json
+++ b/packages/manager/apps/telecom/src/app/telecom/pack/move/translations/Messages_de_DE.json
@@ -79,19 +79,22 @@
   "pack_move_mandatory_field": "Les champs marqués d’un astérisque sont obligatoires.",
   "pack_move_slamming_error": "Oups ! Nous n'avons pas pu vérifier la portabilité de votre numéro",
   "pack_move_go_back": "Details zum Paket",
-  "pack_move_promotion_installation_fees_offered": "Setup gratis",
   "pack_move_provider_infra_costs": "Zusatzkosten",
   "pack_move_comfort_activation": "Aktivierungsgebühr für die Komfortoption",
+  "pack_move_creation_line_fees": "Kosten für die Erstellung einer Leitung",
+  "pack_move_services_to_delete": "Dienstleistungen außerhalb des Pakets",
+  "pack_move_offer_services_to_delete_explain": "Im nächsten Schritt finden Sie die Wahl der zu löschenden/zu speichernden Dienstleistungen.",
   "pack_move_emailpro_title": "E-Mail Pro",
   "pack_move_emailpro_accounts_included": "{{ number }} E-Mail-Accounts inklusive",
   "pack_move_emailpro_account_included": "{{ number }} Account inklusive",
   "pack_move_add_emailpro_account_upto": "Fügen Sie bis zu {{ max }} E-Mail-Accounts hinzu",
-  "pack_move_gtr_4ho_available": "GTR 4HO verfügbar",
-  "pack_move_gtr_10ho_available": "GTR 10HO verfügbar",
-  "pack_move_gtr_5m_4ho_available": "GTR 4HO &amp; OPTION KOMFORT 5M verfügbar",
-  "pack_move_gtr_5m_10ho_available": "GTR 10HO &amp; OPTION KOMFORT 5M verfügbar",
-  "pack_move_gtr_20m_4ho_available": "GTR 4HO &amp; OPTION KOMFORT 20M verfügbar",
-  "pack_move_gtr_20m_10ho_available": "GTR 10HO &amp; OPTION KOMFORT 20M verfügbar",
+  "pack_move_gtr_4ho": "GTR 4HO ({{ price }} ohne MwSt / Monat)",
+  "pack_move_gtr_10ho": "GTR 10HO ({{ price }} ohne MwSt / Monat)",
+  "pack_move_gtr_5m_4ho": "GTR 4HO &amp; OPTION KOMFORT 5M ({{ price }} ohne MwSt / Monat)",
+  "pack_move_gtr_5m_10ho": "GTR 10HO &amp; OPTION KOMFORT 5M ({{ price }} ohne MwSt / Monat)",
+  "pack_move_gtr_20m_4ho": "GTR 4HO &amp; OPTION KOMFORT 20M ({{ price }} ohne MwSt / Monat)",
+  "pack_move_gtr_20m_10ho": "GTR 10HO &amp; OPTION KOMFORT 20M ({{ price }} ohne MwSt / Monat)",
+  "pack_move_no_gtr": "Keine GTR",
   "pack_move_gtr_add": "Diese GTR hinzufügen",
   "pack_move_confirm_resume_emailpro": "Zusätzliche E-Mail-Accounts",
   "pack_move_confirm_resume_gtr_4ho": "Option GTR 4HO verfügbar",
@@ -100,8 +103,8 @@
   "pack_move_confirm_resume_gtr_5m_10ho": "GTR 10HO &amp; KOMFORT 5M Option",
   "pack_move_confirm_resume_gtr_20m_4ho": "GTR 4HO &amp; KOMFORT 20M Option",
   "pack_move_confirm_resume_gtr_20m_10ho": "GTR 10HO &amp; KOMFORT 20M Option",
-  "pack_move_services_to_delete": "Dienstleistungen außerhalb des Pakets",
-  "pack_move_offer_services_to_delete_explain": "Im nächsten Schritt finden Sie die Wahl der zu löschenden/zu speichernden Dienstleistungen.",
+  "pack_move_confirm_shipping": "Sie haben den Liefermodus Ihres neuen Routers pro Luftfahrtunternehmen ausgewählt (+ {{ price }} € ohne MwSt).",
+  "pack_move_confirm_first_mensuality": "Ihre erste Monatsrate beträgt also {{ price }} ohne MwSt.",
   "pack_move_confirm_service_to_delete_total": "Beim Wechsel des Angebots werden insgesamt {{count}} Dienstleistungen gelöscht.",
   "pack_move_confirm_service_to_keep_title": "Dienstleistungen, die beibehalten werden",
   "pack_move_confirm_service_to_keep_total": "Während des Angebotswechsels werden insgesamt {{count}} Dienstleistungen beibehalten.",
@@ -112,28 +115,17 @@
   "pack_move_service_delete_count_multiple": "Die {{count}} Dienste auswählen",
   "pack_move_service_delete_count_single": "Dienstleistung auswählen",
   "pack_move_service_delete_confirm": "Auswahl der Dienste bestätigen",
-  "pack_move_creation_line_fees": "Kosten für die Erstellung einer Leitung",
-  "pack_move_confirm_shipping": "Sie haben den Liefermodus Ihres neuen Routers pro Luftfahrtunternehmen ausgewählt (+ {{ price }} € ohne MwSt).",
-  "pack_move_confirm_first_mensuality": "Ihre erste Monatsrate beträgt also {{ price }} ohne MwSt.",
   "pack_move_resume_comfort_activation": "Die Aktivierungsgebühr für die Komfortoption beträgt {{ price }} zzgl. MwSt.",
   "pack_move_resume_install_fees": "Die Einrichtungsgebühr beträgt {{ price }} ohne MwSt.",
   "pack_move_resume_creation_line_fees": "Die Kosten für die Erstellung einer Leitung belaufen sich auf {{ price }} ohne MwSt.",
+  "pack_move_promotion_installation_fees_offered": "Setup gratis",
   "pack_move_resume_promotion": "Die Einrichtungsgebühr und die ersten {{ duration }} Monate Ihres neuen Abos sind kostenlos (mit Ausnahme der Modem-Miete, Zusatzoptionen oder Transportkosten).",
   "pack_move_modem_yes": "Ich möchte ein neues Modem verwenden ({{ price }} ohne MwSt / Monat)",
   "pack_move_modem_recycled": "Ich möchte ein recyceltes Modem verwenden ({{ price }} ohne MwSt / Monat)",
   "pack_move_modem_no": "Ich möchte kein Modem",
-  "pack_move_modem_required": "Die Wahl eines Modemtyps ist zwingend erforderlich",
-  "pack_move_confirm_modem_rental_yes": "Miete für das neue Modem",
-  "pack_move_confirm_modem_rental_recycled": "Modem-Vermietung",
-  "pack_move_offers_debit_mention_1": "(1) Bis zu 92 Mbit/s VDSL und 22 Mbit/s ADSL, je nach Förderfähigkeit.",
-  "pack_move_offers_debit_mention_2": "(2) Bis zu 36 Mbit/s VDSL und 1 Mbit/s ADSL, je nach Förderfähigkeit.",
   "pack_move_modem_keep": "Ich möchte mein Modem ({{ price }} ohne MwSt / Monat) beibehalten",
+  "pack_move_modem_required": "Die Wahl eines Modemtyps ist zwingend erforderlich",
   "pack_move_confirm_modem_rental": "Modem-Miete",
-  "pack_move_gtr_4ho": "GTR 4HO ({{ price }} ohne MwSt / Monat)",
-  "pack_move_gtr_10ho": "GTR 10HO ({{ price }} ohne MwSt / Monat)",
-  "pack_move_gtr_5m_4ho": "GTR 4HO &amp; OPTION KOMFORT 5M ({{ price }} ohne MwSt / Monat)",
-  "pack_move_gtr_5m_10ho": "GTR 10HO &amp; OPTION KOMFORT 5M ({{ price }} ohne MwSt / Monat)",
-  "pack_move_gtr_20m_4ho": "GTR 4HO &amp; OPTION KOMFORT 20M ({{ price }} ohne MwSt / Monat)",
-  "pack_move_gtr_20m_10ho": "GTR 10HO &amp; OPTION KOMFORT 20M ({{ price }} ohne MwSt / Monat)",
-  "pack_move_no_gtr": "Keine GTR"
+  "pack_move_offers_debit_mention_1": "(1) Bis zu 92 Mbit/s VDSL und 22 Mbit/s ADSL, je nach Förderfähigkeit.",
+  "pack_move_offers_debit_mention_2": "(2) Bis zu 36 Mbit/s VDSL und 1 Mbit/s ADSL, je nach Förderfähigkeit."
 }
