--- a/packages/manager/apps/telecom/src/app/telecom/pack/move/translations/Messages_pl_PL.json
+++ b/packages/manager/apps/telecom/src/app/telecom/pack/move/translations/Messages_pl_PL.json
@@ -78,6 +78,7 @@
   "pack_move_contact_name_info": "Veuillez nous communiquer le nom de la personne susceptible d’accueillir le technicien le jour du rendez-vous.",
   "pack_move_mandatory_field": "Les champs marqués d’un astérisque sont obligatoires.",
   "pack_move_slamming_error": "Oups ! Nous n'avons pas pu vérifier la portabilité de votre numéro",
+  "pack_move_go_back": "Szczegóły dotyczące pakietu",
   "pack_move_eligibility_buildings_available": "Znaleźliśmy następujące budynki, które pasują do Twojego wyszukiwania. Wybierz budynek",
   "pack_move_eligibility_building_name": "Nazwisko",
   "pack_move_eligibility_building_reference": "Opis",
@@ -85,24 +86,22 @@
   "pack_move_eligibility_building_type": "Typ",
   "pack_move_eligibility_building_actions": "Operacja",
   "pack_move_eligibility_building_select_building": "Wybierz",
-  "pack_move_building_details_error": "Wystąpił błąd podczas pobierania informacji o budynku",
-  "pack_move_promotion_description": "Promocja ważna do {{endDate}}",
-  "pack_move_promotion_subscription_months_offered": "{{duration}} miesiąc/e gratis",
-  "pack_move_promotion_installation_fees_offered": "Brak opłaty instalacyjnej",
-  "pack_move_resume_promotion": "Brak opłaty instalacyjnej i {{duration}} pierwszych miesięcy gratis (z wyjątkiem dzierżawy modemu, dodatkowych opcji lub kosztów transportu).",
-  "pack_move_go_back": "Szczegóły dotyczące pakietu",
   "pack_move_provider_infra_costs": "Dodatkowe koszty",
   "pack_move_comfort_activation": "Opłata aktywacyjna za opcję Comfort",
+  "pack_move_creation_line_fees": "Opłata za utworzenie linii",
+  "pack_move_services_to_delete": "Usługi poza pakietem",
+  "pack_move_offer_services_to_delete_explain": "Wybór usług, które chcesz usunąć/zachować, zostanie zaproponowany na kolejnym etapie.",
   "pack_move_emailpro_title": "E-mail Pro",
   "pack_move_emailpro_accounts_included": "{{ number }} kont e-mail w cenie",
   "pack_move_emailpro_account_included": "{{ number }} konto e-mail zawarte",
   "pack_move_add_emailpro_account_upto": "Dodaj do {{ max }} kont e-mail",
-  "pack_move_gtr_4ho_available": "GTR 4HO dostępne",
-  "pack_move_gtr_10ho_available": "GTR 10HO dostępne",
-  "pack_move_gtr_5m_4ho_available": "GTR 4HO &amp; OPCJA KOMFORT 5M dostępny",
-  "pack_move_gtr_5m_10ho_available": "GTR 10HO &amp; OPCJA KOMFORT 5M dostępny",
-  "pack_move_gtr_20m_4ho_available": "GTR 4HO &amp; OPCJA KOMFORT 20M dostępny",
-  "pack_move_gtr_20m_10ho_available": "GTR 10HO &amp; OPCJA KOMFORT 20M dostępny",
+  "pack_move_gtr_4ho": "GTR 4HO ({{ price }} netto/m-c)",
+  "pack_move_gtr_10ho": "GTR 10HO ({{ price }} netto/m-c)",
+  "pack_move_gtr_5m_4ho": "GTR 4HO &amp; OPCJA KOMFORT 5M ({{ price }} netto/m-c)",
+  "pack_move_gtr_5m_10ho": "GTR 10HO &amp; OPCJA KOMFORT 5M ({{ price }} netto/m-c)",
+  "pack_move_gtr_20m_4ho": "GTR 4HO &amp; OPCJA KOMFORT 20M ({{ price }} netto/m-c)",
+  "pack_move_gtr_20m_10ho": "GTR 10HO &amp; OPCJA KOMFORT 20M ({{ price }} netto/m-c)",
+  "pack_move_no_gtr": "Brak GTR",
   "pack_move_gtr_add": "Dodaj ten GTR",
   "pack_move_confirm_resume_emailpro": "Dodatkowe konta email",
   "pack_move_confirm_resume_gtr_4ho": "Opcja GTR 4HO dostępna",
@@ -111,8 +110,8 @@
   "pack_move_confirm_resume_gtr_5m_10ho": "Opcja GTR 10HO &amp; KOMFORT 5M",
   "pack_move_confirm_resume_gtr_20m_4ho": "Opcja GTR 4HO &amp; KOMFORT 20M",
   "pack_move_confirm_resume_gtr_20m_10ho": "Opcja GTR 10HO &amp; KOMFORT 20M",
-  "pack_move_services_to_delete": "Usługi poza pakietem",
-  "pack_move_offer_services_to_delete_explain": "Wybór usług, które chcesz usunąć/zachować, zostanie zaproponowany na kolejnym etapie.",
+  "pack_move_confirm_shipping": "Wybrałeś sposób dostawy nowego modemu dla każdego przewoźnika (+ € netto).",
+  "pack_move_confirm_first_mensuality": "Twoim pierwszym miesięcznym terminem rozliczenia jest {{ price }} netto.",
   "pack_move_confirm_service_to_delete_total": "Łącznie {{count}} usługi zostaną usunięte podczas zmiany oferty.",
   "pack_move_confirm_service_to_keep_title": "Usługi, które będą przechowywane",
   "pack_move_confirm_service_to_keep_total": "Łącznie {{count}} usługi zostaną zachowane podczas zmiany oferty.",
@@ -123,27 +122,20 @@
   "pack_move_service_delete_count_multiple": "Wybierz {{count}} usługi",
   "pack_move_service_delete_count_single": "Wybierz usługę",
   "pack_move_service_delete_confirm": "Potwierdź wybór usług",
-  "pack_move_creation_line_fees": "Opłata za utworzenie linii",
-  "pack_move_confirm_shipping": "Wybrałeś sposób dostawy nowego modemu dla każdego przewoźnika (+ € netto).",
-  "pack_move_confirm_first_mensuality": "Twoim pierwszym miesięcznym terminem rozliczenia jest {{ price }} netto.",
   "pack_move_resume_comfort_activation": "Opłata aktywacyjna dla opcji Comfort wynosi {{ price }} netto.",
   "pack_move_resume_install_fees": "Opłata instalacyjna to {{ price }} netto.",
   "pack_move_resume_creation_line_fees": "Opłata za utworzenie linii wynosi {{ price }} netto.",
+  "pack_move_building_details_error": "Wystąpił błąd podczas pobierania informacji o budynku",
+  "pack_move_promotion_description": "Promocja ważna do {{endDate}}",
+  "pack_move_promotion_subscription_months_offered": "{{duration}} miesiąc/e gratis",
+  "pack_move_promotion_installation_fees_offered": "Brak opłaty instalacyjnej",
+  "pack_move_resume_promotion": "Brak opłaty instalacyjnej i {{duration}} pierwszych miesięcy gratis (z wyjątkiem dzierżawy modemu, dodatkowych opcji lub kosztów transportu).",
   "pack_move_modem_yes": "Chcę zamówić nowy modem ({{ price }} netto / m-c)",
   "pack_move_modem_recycled": "Chcę skorzystać z modemu z recyklingu ({{ price }} netto / m-c)",
   "pack_move_modem_no": "Nie chcę modemu",
-  "pack_move_modem_required": "Wybór typu modemu jest obowiązkowy",
-  "pack_move_confirm_modem_rental_yes": "Dzierżawa modemu",
-  "pack_move_confirm_modem_rental_recycled": "Wynajem modemu z recyklingu",
-  "pack_move_offers_debit_mention_1": "(1) Aż do 92 Mb/s łączących się w VDSL i 22 Mb/s w ADSL, w zależności od dostępności.",
-  "pack_move_offers_debit_mention_2": "(2) Do 36 Mb/s w VDSL i 1 Mb/s w ADSL, w zależności od dostępności.",
   "pack_move_modem_keep": "Chcę zachować mój modem ({{ price }} netto/m-c)",
+  "pack_move_modem_required": "Wybór typu modemu jest obowiązkowy",
   "pack_move_confirm_modem_rental": "Dzierżawa modemu",
-  "pack_move_gtr_4ho": "GTR 4HO ({{ price }} netto/m-c)",
-  "pack_move_gtr_10ho": "GTR 10HO ({{ price }} netto/m-c)",
-  "pack_move_gtr_5m_4ho": "GTR 4HO &amp; OPCJA KOMFORT 5M ({{ price }} netto/m-c)",
-  "pack_move_gtr_5m_10ho": "GTR 10HO &amp; OPCJA KOMFORT 5M ({{ price }} netto/m-c)",
-  "pack_move_gtr_20m_4ho": "GTR 4HO &amp; OPCJA KOMFORT 20M ({{ price }} netto/m-c)",
-  "pack_move_gtr_20m_10ho": "GTR 10HO &amp; OPCJA KOMFORT 20M ({{ price }} netto/m-c)",
-  "pack_move_no_gtr": "Brak GTR"
+  "pack_move_offers_debit_mention_1": "(1) Aż do 92 Mb/s łączących się w VDSL i 22 Mb/s w ADSL, w zależności od dostępności.",
+  "pack_move_offers_debit_mention_2": "(2) Do 36 Mb/s w VDSL i 1 Mb/s w ADSL, w zależności od dostępności."
 }
