--- a/packages/manager/apps/telecom/src/app/telecom/pack/migration/translations/Messages_de_DE.json
+++ b/packages/manager/apps/telecom/src/app/telecom/pack/migration/translations/Messages_de_DE.json
@@ -45,13 +45,13 @@
   "telecom_pack_migration_add_domains_upto": "Ajoutez jusqu'à {{ max }} domaines",
   "telecom_pack_migration_domain_additional_text": "/domaine",
   "telecom_pack_migration_gtr_title": "GTR (si éligible)",
-  "telecom_pack_migration_gtr_4ho_available": "GTR 4HO verfügbar",
-  "telecom_pack_migration_gtr_10ho_available": "GTR 10HO verfügbar",
-  "telecom_pack_migration_gtr_5m_4ho_available": "GTR 4HO &amp; OPTION KOMFORT 5M verfügbar",
-  "telecom_pack_migration_gtr_5m_10ho_available": "GTR 10HO &amp; OPTION KOMFORT 5M verfügbar",
-  "telecom_pack_migration_gtr_20m_4ho_available": "GTR 4HO &amp; OPTION KOMFORT 20M verfügbar",
-  "telecom_pack_migration_gtr_20m_10ho_available": "GTR 10HO &amp; OPTION KOMFORT 20M verfügbar",
-  "telecom_pack_migration_gtr_add": "Diese GTR hinzufügen",
+  "telecom_pack_migration_gtr_4ho": "GTR 4HO ({{ price }} ohne MwSt / Monat)",
+  "telecom_pack_migration_gtr_10ho": "GTR 10HO ({{ price }} ohne MwSt / Monat)",
+  "telecom_pack_migration_gtr_5m_4ho": "GTR 4HO &amp; OPTION KOMFORT 5M ({{ price }} ohne MwSt / Monat)",
+  "telecom_pack_migration_gtr_5m_10ho": "GTR 10HO &amp; OPTION KOMFORT 5M ({{ price }} ohne MwSt / Monat)",
+  "telecom_pack_migration_gtr_20m_4ho": "GTR 4HO &amp; OPTION KOMFORT 20M ({{ price }} ohne MwSt / Monat)",
+  "telecom_pack_migration_gtr_20m_10ho": "GTR 10HO &amp; OPTION KOMFORT 20M ({{ price }} ohne MwSt / Monat)",
+  "telecom_pack_migration_no_gtr": "Keine GTR",
   "telecom_pack_migration_offer_choice": "Choix de l'offre",
   "telecom_pack_migration_offer_choice_error_loading": "Oups ! Nous ne parvenons pas à charger les offres disponibles pour votre pack.",
   "telecom_pack_migration_offer_choice_no_offers": "Aucun changement d'offre n'est disponible avec votre offre actuelle.",
@@ -152,6 +152,7 @@
   "telecom_pack_migration_pto_where_description": "Cette référence est inscrite sur le boîtier PTO et est composée de chiffres et de lettres sous la forme OO-XXXX-XXXX /C",
   "telecom_pack_migration_pto_yes_not_known": "J'ai un boîtier mais je ne connais pas son numéro",
   "telecom_pack_migration_promotion_installation_fees_offered": "Setup gratis",
+  "telecom_pack_migration_confirm_modem_rental": "Modem-Miete",
   "telecom_pack_migration_confirm_provider_infra": "Zusatzkosten",
   "telecom_pack_migration_confirm_comfort_activation": "Die Aktivierungsgebühr für die Komfortoption beträgt {{ price }} zzgl. MwSt.",
   "telecom_pack_migration_confirm_install_fees": "Die Einrichtungsgebühr beträgt {{ price }} ohne MwSt",
@@ -162,18 +163,8 @@
   "telecom_pack_migration_modem_yes": "Ich möchte ein neues Modem verwenden ({{ price }} ohne MwSt / Monat)",
   "telecom_pack_migration_modem_recycled": "Ich möchte ein recyceltes Modem verwenden ({{ price }} ohne MwSt / Monat)",
   "telecom_pack_migration_modem_no": "Ich möchte kein Modem",
-  "telecom_pack_migration_modem_required": "Die Wahl eines Modemtyps ist zwingend erforderlich",
-  "telecom_pack_migration_confirm_modem_rental_yes": "Miete für das neue Modem",
-  "telecom_pack_migration_confirm_modem_rental_recycled": "Modem-Vermietung",
-  "telecom_pack_migration_offers_debit_mention_1": "(1) Bis zu 92 Mbit/s VDSL und 22 Mbit/s ADSL, je nach Förderfähigkeit.",
-  "telecom_pack_migration_offers_debit_mention_2": "(2) Bis zu 36 Mbit/s VDSL und 1 Mbit/s ADSL, je nach Förderfähigkeit.",
   "telecom_pack_migration_modem_keep": "Ich möchte mein Modem ({{ price }} ohne MwSt / Monat) beibehalten",
-  "telecom_pack_migration_confirm_modem_rental": "Modem-Miete",
-  "telecom_pack_migration_gtr_4ho": "GTR 4HO ({{ price }} ohne MwSt / Monat)",
-  "telecom_pack_migration_gtr_10ho": "GTR 10HO ({{ price }} ohne MwSt / Monat)",
-  "telecom_pack_migration_gtr_5m_4ho": "GTR 4HO &amp; OPTION KOMFORT 5M ({{ price }} ohne MwSt / Monat)",
-  "telecom_pack_migration_gtr_5m_10ho": "GTR 10HO &amp; OPTION KOMFORT 5M ({{ price }} ohne MwSt / Monat)",
-  "telecom_pack_migration_gtr_20m_4ho": "GTR 4HO &amp; OPTION KOMFORT 20M ({{ price }} ohne MwSt / Monat)",
-  "telecom_pack_migration_gtr_20m_10ho": "GTR 10HO &amp; OPTION KOMFORT 20M ({{ price }} ohne MwSt / Monat)",
-  "telecom_pack_migration_no_gtr": "Keine GTR"
+  "telecom_pack_migration_modem_required": "Die Wahl eines Modemtyps ist zwingend erforderlich",
+  "telecom_pack_migration_offers_debit_mention_1": "(1) Bis zu 92 Mbit/s VDSL und 22 Mbit/s ADSL, je nach Förderfähigkeit.",
+  "telecom_pack_migration_offers_debit_mention_2": "(2) Bis zu 36 Mbit/s VDSL und 1 Mbit/s ADSL, je nach Förderfähigkeit."
 }
