--- a/packages/manager/apps/telecom/src/app/telecom/pack/migration/translations/Messages_en_GB.json
+++ b/packages/manager/apps/telecom/src/app/telecom/pack/migration/translations/Messages_en_GB.json
@@ -45,13 +45,13 @@
   "telecom_pack_migration_add_domains_upto": "Add up to {{ max }} domain names",
   "telecom_pack_migration_domain_additional_text": "/domain",
   "telecom_pack_migration_gtr_title": "GRT - Guaranteed Recovery Time (if eligible)",
-  "telecom_pack_migration_gtr_4ho_available": "GTR 4HO available",
-  "telecom_pack_migration_gtr_10ho_available": "GTR 10HO available",
-  "telecom_pack_migration_gtr_5m_4ho_available": "GTR 4HO &amp; COMFORT 5M OPTION available",
-  "telecom_pack_migration_gtr_5m_10ho_available": "GTR 10HO &amp; COMFORT 5M OPTION available",
-  "telecom_pack_migration_gtr_20m_4ho_available": "GTR 4HO &amp; COMFORT 20M OPTION available",
-  "telecom_pack_migration_gtr_20m_10ho_available": "GTR 10HO &amp; COMFORT 20M OPTION available",
-  "telecom_pack_migration_gtr_add": "Add this GRT",
+  "telecom_pack_migration_gtr_4ho": "GTR 4HO ({{ price }} ex. VAT/month)",
+  "telecom_pack_migration_gtr_10ho": "GTR 10HO ({{ price }} ex. VAT/month)",
+  "telecom_pack_migration_gtr_5m_4ho": "GTR 4HO &amp; COMFORT 5M OPTION ({{ price }} ex. VAT/month)",
+  "telecom_pack_migration_gtr_5m_10ho": "GTR 10HO &amp; COMFORT 5M OPTION ({{ price }} ex. VAT/month)",
+  "telecom_pack_migration_gtr_20m_4ho": "GTR 4HO &amp; COMFORT 20M OPTION ({{ price }} ex. VAT/month)",
+  "telecom_pack_migration_gtr_20m_10ho": "GTR 10HO &amp; COMFORT 20M OPTION ({{ price }} ex. VAT/month)",
+  "telecom_pack_migration_no_gtr": "No GRT",
   "telecom_pack_migration_offer_choice": "Choose plan",
   "telecom_pack_migration_offer_choice_error_loading": "Oops! We are unable to load the plans available for your pack.",
   "telecom_pack_migration_offer_choice_no_offers": "No plan changes are available for your current plan.",
@@ -181,17 +181,8 @@
   "telecom_pack_migration_modem_yes": "I want to use a new modem ({{ price }} ex. VAT/month)",
   "telecom_pack_migration_modem_recycled": "I want to use a recycled modem ({{ price }} ex. VAT/month)",
   "telecom_pack_migration_modem_no": "I do not want a modem",
-  "telecom_pack_migration_modem_required": "You must select a modem type",
-  "telecom_pack_migration_confirm_modem_rental_yes": "New modem rental",
-  "telecom_pack_migration_confirm_modem_rental_recycled": "Location modem recycled",
-  "telecom_pack_migration_offers_debit_mention_1": "(1) Up to 92 Mb/s descending in VDSL and 22 Mb/s in ADSL, depending on eligibility.",
-  "telecom_pack_migration_offers_debit_mention_2": "(2) Up to 36 Mb/s VDSL and 1 Mb/s ADSL, depending on eligibility.",
   "telecom_pack_migration_modem_keep": "I want to keep my modem ({{ price }} ex. VAT/month)",
-  "telecom_pack_migration_gtr_4ho": "GTR 4HO ({{ price }} ex. VAT/month)",
-  "telecom_pack_migration_gtr_10ho": "GTR 10HO ({{ price }} ex. VAT/month)",
-  "telecom_pack_migration_gtr_5m_4ho": "GTR 4HO &amp; COMFORT 5M OPTION ({{ price }} ex. VAT/month)",
-  "telecom_pack_migration_gtr_5m_10ho": "GTR 10HO &amp; COMFORT 5M OPTION ({{ price }} ex. VAT/month)",
-  "telecom_pack_migration_gtr_20m_4ho": "GTR 4HO &amp; COMFORT 20M OPTION ({{ price }} ex. VAT/month)",
-  "telecom_pack_migration_gtr_20m_10ho": "GTR 10HO &amp; COMFORT 20M OPTION ({{ price }} ex. VAT/month)",
-  "telecom_pack_migration_no_gtr": "No GRT"
+  "telecom_pack_migration_modem_required": "You must select a modem type",
+  "telecom_pack_migration_offers_debit_mention_1": "(1) Up to 92 Mb/s descending in VDSL and 22 Mb/s in ADSL, depending on eligibility.",
+  "telecom_pack_migration_offers_debit_mention_2": "(2) Up to 36 Mb/s VDSL and 1 Mb/s ADSL, depending on eligibility."
 }
