--- a/packages/manager/apps/telecom/src/app/telecom/pack/move/translations/Messages_pt_PT.json
+++ b/packages/manager/apps/telecom/src/app/telecom/pack/move/translations/Messages_pt_PT.json
@@ -78,19 +78,22 @@
   "pack_move_contact_name_info": "Veuillez nous communiquer le nom de la personne susceptible d’accueillir le technicien le jour du rendez-vous.",
   "pack_move_mandatory_field": "Les champs marqués d’un astérisque sont obligatoires.",
   "pack_move_slamming_error": "Oups ! Nous n'avons pas pu vérifier la portabilité de votre numéro",
-  "pack_move_promotion_installation_fees_offered": "Sem custos de instalação",
   "pack_move_provider_infra_costs": "Custos suplementares",
   "pack_move_comfort_activation": "Taxas de ativação da opção Confort",
+  "pack_move_creation_line_fees": "Taxas de criação de linha",
+  "pack_move_services_to_delete": "Serviços fora pack",
+  "pack_move_offer_services_to_delete_explain": "A escolha dos serviços a eliminar/conservar será proposta na etapa seguinte.",
   "pack_move_emailpro_title": "Email Pro",
   "pack_move_emailpro_accounts_included": "{{ number }} contas de e-mail incluídas",
   "pack_move_emailpro_account_included": "{{ number }} conta de mail incluída",
   "pack_move_add_emailpro_account_upto": "Adicione até {{ max }} contas de e-mail",
-  "pack_move_gtr_4ho_available": "GTR 4HO disponível",
-  "pack_move_gtr_10ho_available": "GTR 10HO disponível",
-  "pack_move_gtr_5m_4ho_available": "GTR 4HO &amp; OPTION CONFORT 5M disponível",
-  "pack_move_gtr_5m_10ho_available": "GTR 10HO &amp; OPTION CONFORT 5M disponível",
-  "pack_move_gtr_20m_4ho_available": "GTR 4HO &amp; OPTION CONFORT 20M disponível",
-  "pack_move_gtr_20m_10ho_available": "GTR 10HO &amp; OPTION CONFORT 20M disponível",
+  "pack_move_gtr_4ho": "GTR 4HO ({{ price }} s/IVA/mês)",
+  "pack_move_gtr_10ho": "GTR 10HO ({{ price }} s/IVA/mês)",
+  "pack_move_gtr_5m_4ho": "GTR 4HO &amp; OPÇÃO CONFORT 5M ({{ price }}/mês + IVA)",
+  "pack_move_gtr_5m_10ho": "GTR 10HO &amp; OPÇÃO CONFORT 5M ({{ price }}/mês + IVA)",
+  "pack_move_gtr_20m_4ho": "GTR 4HO &amp; OPÇÃO CONFORT 20M ({{ price }}/mês + IVA)",
+  "pack_move_gtr_20m_10ho": "GTR 10HO &amp; OPÇÃO CONFORT 20M ({{ price }}/mês + IVA)",
+  "pack_move_no_gtr": "Nenhum GTR",
   "pack_move_gtr_add": "Adicionar este GTR",
   "pack_move_confirm_resume_emailpro": "Conta(s) de e-mail suplementar(s)",
   "pack_move_confirm_resume_gtr_4ho": "Opção GTR 4HO disponível",
@@ -99,8 +102,8 @@
   "pack_move_confirm_resume_gtr_5m_10ho": "Opção GTR 10HO &amp; CONFORT 5M",
   "pack_move_confirm_resume_gtr_20m_4ho": "Opção GTR 4HO &amp; CONFORT 20M",
   "pack_move_confirm_resume_gtr_20m_10ho": "Opção GTR 10HO &amp; CONFORT 20M",
-  "pack_move_services_to_delete": "Serviços fora pack",
-  "pack_move_offer_services_to_delete_explain": "A escolha dos serviços a eliminar/conservar será proposta na etapa seguinte.",
+  "pack_move_confirm_shipping": "Selecionou o modo de entrega do seu novo modem por transportador (+ {{ price }}€ + IVA).",
+  "pack_move_confirm_first_mensuality": "A sua primeira mensalidade será de {{ price }} + IVA.",
   "pack_move_confirm_service_to_delete_total": "No total, {{count}} serviços serão eliminados durante a alteração da oferta.",
   "pack_move_confirm_service_to_keep_title": "Serviços que serão conservados",
   "pack_move_confirm_service_to_keep_total": "No total, {{count}} serviços serão conservados durante a alteração da oferta.",
@@ -111,28 +114,17 @@
   "pack_move_service_delete_count_multiple": "Selecionar os {{count}} serviços",
   "pack_move_service_delete_count_single": "Selecionar o serviço",
   "pack_move_service_delete_confirm": "Confirmar a seleção dos serviços",
-  "pack_move_creation_line_fees": "Taxas de criação de linha",
-  "pack_move_confirm_shipping": "Selecionou o modo de entrega do seu novo modem por transportador (+ {{ price }}€ + IVA).",
-  "pack_move_confirm_first_mensuality": "A sua primeira mensalidade será de {{ price }} + IVA.",
   "pack_move_resume_comfort_activation": "As taxas de ativação da opção Confort são de {{ price }} + IVA.",
   "pack_move_resume_install_fees": "As taxas de instalação são de {{ price }} + IVA.",
   "pack_move_resume_creation_line_fees": "Os custos de criação da linha são de {{ price }} + IVA.",
+  "pack_move_promotion_installation_fees_offered": "Sem custos de instalação",
   "pack_move_resume_promotion": "As taxas de instalação e os {{ duration }} primeiros meses da sua nova subscrição são oferecidos (sem locação do modem, opções suplementares ou custos de transporte).",
   "pack_move_modem_yes": "Pretendo escolher um modem nove ({{ price }} s/IVA/mês)",
   "pack_move_modem_recycled": "Pretendo efetuar um modem reciclado ({{ price }} s/IVA/mês)",
   "pack_move_modem_no": "Não desejo nenhum modem",
-  "pack_move_modem_required": "A seleção de um tipo de modem é obrigatória",
-  "pack_move_confirm_modem_rental_yes": "Locação modem nove",
-  "pack_move_confirm_modem_rental_recycled": "Locação modem reciclada",
-  "pack_move_offers_debit_mention_1": "(1) Até 92 Mb/s desceram em VDSL e 22 Mb/s em ADSL, consoante a elegibilidade.",
-  "pack_move_offers_debit_mention_2": "(2) Até 36 Mb/s montante em VDSL e 1 Mb/s em ADSL, consoante a elegibilidade.",
   "pack_move_modem_keep": "Desejo manter o meu modem ({{ price }} s/IVA/mês)",
+  "pack_move_modem_required": "A seleção de um tipo de modem é obrigatória",
   "pack_move_confirm_modem_rental": "Locação modem",
-  "pack_move_gtr_4ho": "GTR 4HO ({{ price }} s/IVA/mês)",
-  "pack_move_gtr_10ho": "GTR 10HO ({{ price }} s/IVA/mês)",
-  "pack_move_gtr_5m_4ho": "GTR 4HO &amp; OPÇÃO CONFORT 5M ({{ price }}/mês + IVA)",
-  "pack_move_gtr_5m_10ho": "GTR 10HO &amp; OPÇÃO CONFORT 5M ({{ price }}/mês + IVA)",
-  "pack_move_gtr_20m_4ho": "GTR 4HO &amp; OPÇÃO CONFORT 20M ({{ price }}/mês + IVA)",
-  "pack_move_gtr_20m_10ho": "GTR 10HO &amp; OPÇÃO CONFORT 20M ({{ price }}/mês + IVA)",
-  "pack_move_no_gtr": "Nenhum GTR"
+  "pack_move_offers_debit_mention_1": "(1) Até 92 Mb/s desceram em VDSL e 22 Mb/s em ADSL, consoante a elegibilidade.",
+  "pack_move_offers_debit_mention_2": "(2) Até 36 Mb/s montante em VDSL e 1 Mb/s em ADSL, consoante a elegibilidade."
 }
