--- a/packages/manager/apps/web/client/app/domain/dashboard/translations/Messages_en_GB.json
+++ b/packages/manager/apps/web/client/app/domain/dashboard/translations/Messages_en_GB.json
@@ -41,8 +41,6 @@
   "domain_dashboard_whois_pending": "This service is currently being set up. Please wait.",
   "domain_dashboard_whois_invalid_contact": "Only the admin contact is authorised to perform this action.",
   "domain_dashboard_whois_error": "An error has occurred loading the WHOIS information. Please try again later.",
-  "domain_dashboard_obfuscated_email": "Alternative email addresses",
-  "domain_dashboard_obfuscated_email_regenerate_button": "Manage alternative email addresses",
   "domain_dashboard_offer": "Solution ",
   "domain_dashboard_dns_state": "Status",
   "domain_dashboard_dns_anycast": "Anycast DNS option",
@@ -91,6 +89,7 @@
   "domain_dashboard_web_hosting_more_infos": "More information",
   "domain_configuration_action_disable": "Disable",
   "domain_configuration_action_enable": "Enable",
+  "domain_contact_owner": "Holder",
   "domain_tab_GENERAL_INFORMATIONS": "General information",
   "domain_tab_DNS": "DNS servers ",
   "domain_tab_DNS_warning_only_one_dns": "Please note: We strongly advise having more than one active DNS server.",
@@ -245,7 +244,10 @@
   "domain_configuration_add_subdomain_add_dom": "Add a domain or sub-domain to your hosting plan",
   "domain_configuration_add_subdomain_hosting_choice": "Choose the hosting plan you want to attach <strong>{{t0}} to. {{t1}}</strong>",
   "domain_configuration_add_subdomain_hosting_search": "Search for a hosting plan",
+  "domain_configuration_renew": "Your domain name is suspended. You can still renew it during the grace period. Once this period has passed, additional fees will apply.",
+  "domain_configuration_restorable": "Your domain name is being deleted. You can still restore it for an additional fee, by following the restore link. If you choose not to do this, your domain name will be permanently deleted.",
   "domain_configuration_renew_title_button": "Renew",
+  "domain_configuration_restorable_title_button": "Restore",
   "domain_configuration_renew_alldom_title_button": "Renew AllDom",
   "domain_configuration_renew_title": "Renew your domain",
   "domain_configuration_renew_step1_question": "To renew your <span class=\"italic\">{{t0}} domain</span>, you will need to use the OVHcloud renewal interface (outside of the OVHcloud Web Control Panel).",
@@ -823,9 +825,5 @@
   "domain_dashboard_general_information_domain_automatic": "Automatic renewal",
   "domain_dashboard_general_information_alldom_termination_info": "Your pack will expire on {{expirationDate}}. The non-cancelled domains included in this pack will be <strong>renewed for free until your pack expires permanently.</strong> After this date, your non-cancelled domains will be billed individually.",
   "domain_dashboard_general_information_alldom_renewal_link": "Undo pack cancellation",
-  "domain_dashboard_general_information_alldom_termination_warning_close": "Close",
-  "domain_contact_owner": "Holder",
-  "domain_configuration_renew": "Your domain name is suspended. You can still renew it during the grace period. Once this period has passed, additional fees will apply.",
-  "domain_configuration_restorable": "Your domain name is being deleted. You can still restore it for an additional fee, by following the restore link. If you choose not to do this, your domain name will be permanently deleted.",
-  "domain_configuration_restorable_title_button": "Restore"
+  "domain_dashboard_general_information_alldom_termination_warning_close": "Close"
 }
