--- a/packages/manager/apps/web/client/app/domain/dashboard/translations/Messages_es_ES.json
+++ b/packages/manager/apps/web/client/app/domain/dashboard/translations/Messages_es_ES.json
@@ -41,8 +41,6 @@
   "domain_dashboard_whois_pending": "Creando el servicio... Espere, por favor.",
   "domain_dashboard_whois_invalid_contact": "Solo el contacto administrador está autorizado a realizar esta acción.",
   "domain_dashboard_whois_error": "Se ha producido un error al cargar la información del WHOIS. Por favor, vuelva a intentarlo más adelante.",
-  "domain_dashboard_obfuscated_email": "Direcciones de correo de sustitución",
-  "domain_dashboard_obfuscated_email_regenerate_button": "Gestionar las direcciones de correo de sustitución",
   "domain_dashboard_offer": "Producto",
   "domain_dashboard_dns_state": "Estado",
   "domain_dashboard_dns_anycast": "Opción DNS Anycast",
@@ -91,6 +89,7 @@
   "domain_dashboard_web_hosting_more_infos": "Más información",
   "domain_configuration_action_disable": "Desactivar",
   "domain_configuration_action_enable": "Activar",
+  "domain_contact_owner": "Propietario",
   "domain_tab_GENERAL_INFORMATIONS": "Información general",
   "domain_tab_DNS": "Servidores DNS",
   "domain_tab_DNS_warning_only_one_dns": "Atención: Es altamente desaconsejable tener un único servidor DNS activo.",
@@ -245,7 +244,10 @@
   "domain_configuration_add_subdomain_add_dom": "Añadir un dominio o subdominio a mi alojamiento compartido",
   "domain_configuration_add_subdomain_hosting_choice": "Seleccione el alojamiento al que quiere asociar <strong>{{t0}}.{{t1}}</strong>",
   "domain_configuration_add_subdomain_hosting_search": "Buscar un alojamiento",
+  "domain_configuration_renew": "Su dominio está suspendido. Recuerde que es posible renovarlo durante el período de gracia. Una vez finalizado este período, se aplicarán cargos adicionales.",
+  "domain_configuration_restorable": "Se está eliminando su dominio. Puede restaurarlo haciendo clic en el enlace «Restaurar». Tenga en cuenta que esta acción tiene un coste adicional. Si no realiza ninguna acción, el dominio se eliminará definitivamente.",
   "domain_configuration_renew_title_button": "Renovar",
+  "domain_configuration_restorable_title_button": "Restaurar",
   "domain_configuration_renew_alldom_title_button": "Renovar mi AllDom",
   "domain_configuration_renew_title": "Renovar el dominio",
   "domain_configuration_renew_step1_question": "Para renovar su dominio <span class=\"italic\">{{t0}}</span>, deberá utilizar la interfaz de renovación de OVHcloud (fuera del área de cliente Web).",
@@ -824,9 +826,5 @@
   "domain_dashboard_general_information_domain_automatic": "Renovación automática",
   "domain_dashboard_general_information_alldom_termination_info": "Su pack expirará el {{ expirationDate }}. Los dominios incluidos que no hayan sido dados de baja <strong>se renovarán de forma gratuita hasta la expiración definitiva del pack.</strong> A partir de esa fecha, los dominios que no hayan sido dados de baja se facturarán por separado.",
   "domain_dashboard_general_information_alldom_renewal_link": "Cancelar la baja del pack",
-  "domain_dashboard_general_information_alldom_termination_warning_close": "Cerrar",
-  "domain_contact_owner": "Propietario",
-  "domain_configuration_renew": "Su dominio está suspendido. Recuerde que es posible renovarlo durante el período de gracia. Una vez finalizado este período, se aplicarán cargos adicionales.",
-  "domain_configuration_restorable": "Se está eliminando su dominio. Puede restaurarlo haciendo clic en el enlace «Restaurar». Tenga en cuenta que esta acción tiene un coste adicional. Si no realiza ninguna acción, el dominio se eliminará definitivamente.",
-  "domain_configuration_restorable_title_button": "Restaurar"
+  "domain_dashboard_general_information_alldom_termination_warning_close": "Cerrar"
 }
