--- a/packages/manager/apps/web/client/app/domain/dashboard/translations/Messages_it_IT.json
+++ b/packages/manager/apps/web/client/app/domain/dashboard/translations/Messages_it_IT.json
@@ -41,8 +41,6 @@
   "domain_dashboard_whois_pending": "Il servizio è in fase di creazione Ti chiediamo di attendere.",
   "domain_dashboard_whois_invalid_contact": "Solo il contatto amministratore è autorizzato a effettuare questa azione.",
   "domain_dashboard_whois_error": "Si è verificato un errore durante il caricamento delle informazioni relative al Whois. Riprova più tardi.",
-  "domain_dashboard_obfuscated_email": "Indirizzi email sostitutivi",
-  "domain_dashboard_obfuscated_email_regenerate_button": "Gestisci gli indirizzi email sostitutivi",
   "domain_dashboard_offer": "Servizio",
   "domain_dashboard_dns_state": "Stato",
   "domain_dashboard_dns_anycast": "Opzione DNS Anycast",
@@ -91,6 +89,7 @@
   "domain_dashboard_web_hosting_more_infos": "Maggiori informazioni",
   "domain_configuration_action_disable": "Disattiva",
   "domain_configuration_action_enable": "Attiva",
+  "domain_contact_owner": "Proprietario",
   "domain_tab_GENERAL_INFORMATIONS": "Informazioni generali",
   "domain_tab_DNS": "Server DNS",
   "domain_tab_DNS_warning_only_one_dns": "Attenzione: è fortemente sconsigliato disporre di un solo DNS attivo.",
@@ -245,7 +244,10 @@
   "domain_configuration_add_subdomain_add_dom": "Aggiungere un dominio o sottodominio all’hosting condiviso",
   "domain_configuration_add_subdomain_hosting_choice": "Scegli l'hosting a cui vuoi associare <strong>{{t0}}.{{t1}}</strong>",
   "domain_configuration_add_subdomain_hosting_search": "Cerca un hosting",
+  "domain_configuration_renew": "Il tuo dominio è sospeso, ma ti ricordiamo che puoi rinnovarlo durante il Grace Period. Trascorso questo termine, verranno applicate spese supplementari.",
+  "domain_configuration_restorable": "Il dominio è in corso di eliminazione. Per recuperarlo con una spesa aggiuntiva, clicca sul link “Ripristinare”. In caso contrario il dominio verrà definitivamente eliminato.",
   "domain_configuration_renew_title_button": "Rinnova",
+  "domain_configuration_restorable_title_button": "Ripristinare",
   "domain_configuration_renew_alldom_title_button": "Rinnova il tuo AllDom",
   "domain_configuration_renew_title": "Rinnovare il mio Dominio",
   "domain_configuration_renew_step1_question": "Per rinnovare il tuo dominio <span class=\"italic\">{{t0}}</span>,devi utilizzare l'interfaccia di rinnovo OVHcloud (esterna allo Spazio Cliente Web).",
@@ -824,9 +826,5 @@
   "domain_dashboard_general_information_domain_automatic": "Rinnovo automatico",
   "domain_dashboard_general_information_alldom_termination_info": "Il tuo pack scadrà il {{ expirationDate }}. I domini non disattivati inclusi nel pack saranno<strong> rinnovati gratuitamente fino alla scadenza definitiva del pacchetto.</strong> A partire da questa data, i domini non disattivati saranno fatturati individualmente.",
   "domain_dashboard_general_information_alldom_renewal_link": "Annulla la disattivazione del pack",
-  "domain_dashboard_general_information_alldom_termination_warning_close": "Chiudi",
-  "domain_contact_owner": "Proprietario",
-  "domain_configuration_renew": "Il tuo dominio è sospeso, ma ti ricordiamo che puoi rinnovarlo durante il Grace Period. Trascorso questo termine, verranno applicate spese supplementari.",
-  "domain_configuration_restorable": "Il dominio è in corso di eliminazione. Per recuperarlo con una spesa aggiuntiva, clicca sul link “Ripristinare”. In caso contrario il dominio verrà definitivamente eliminato.",
-  "domain_configuration_restorable_title_button": "Ripristinare"
+  "domain_dashboard_general_information_alldom_termination_warning_close": "Chiudi"
 }
