--- a/packages/manager/apps/web/client/app/domain/dashboard/translations/Messages_pt_PT.json
+++ b/packages/manager/apps/web/client/app/domain/dashboard/translations/Messages_pt_PT.json
@@ -41,8 +41,6 @@
   "domain_dashboard_whois_pending": "O seu serviço está em curso de criação. Aguarde, por favor.",
   "domain_dashboard_whois_invalid_contact": "Apenas o contacto administrador está autorizado a realizar esta ação.",
   "domain_dashboard_whois_error": "Ocorreu um erro aquando do carregamento das informações do WHOIS. Tente novamente mais tarde.",
-  "domain_dashboard_obfuscated_email": "Endereços de e-mail de substituição",
-  "domain_dashboard_obfuscated_email_regenerate_button": "Gerir os e-mails de substituição",
   "domain_dashboard_offer": "Oferta",
   "domain_dashboard_dns_state": "Estado",
   "domain_dashboard_dns_anycast": "Opção DNS Anycast",
@@ -91,6 +89,7 @@
   "domain_dashboard_web_hosting_more_infos": "Mais informações",
   "domain_configuration_action_disable": "Desativar",
   "domain_configuration_action_enable": "Ativar",
+  "domain_contact_owner": "Titular",
   "domain_tab_GENERAL_INFORMATIONS": "Informações gerais",
   "domain_tab_DNS": "Servidores DNS",
   "domain_tab_DNS_warning_only_one_dns": "Atenção, desaconselhamos fortemente que tenha apenas um servidor DNS ativo.",
@@ -245,7 +244,10 @@
   "domain_configuration_add_subdomain_add_dom": "Adicionar domínio ou subdomínio ao meu alojamento web",
   "domain_configuration_add_subdomain_hosting_choice": "Escolha o alojamento ao qual deseja associar <strong>{{t0}}. {{t1}}</strong>",
   "domain_configuration_add_subdomain_hosting_search": "Procurar um alojamento",
+  "domain_configuration_renew": "O seu domínio foi suspenso, mas pode renová-lo durante o período de graça. Decorrido este prazo, serão aplicadas taxas adicionais.",
+  "domain_configuration_restorable": "O seu domínio está a ser eliminado. Pode restaurá-lo, com custos adicionais, através do link «Restaurar». Caso contrário, o domínio será eliminado de forma definitiva.",
   "domain_configuration_renew_title_button": "Renovar",
+  "domain_configuration_restorable_title_button": "Restaurar",
   "domain_configuration_renew_alldom_title_button": "Renovar o meu AllDom",
   "domain_configuration_renew_title": "Renovar o meu Domínio",
   "domain_configuration_renew_step1_question": "Para renovar o seu domínio <span class=\"italic\">{{t0}}</span>, deverá utilizar a interface de renovação OVHcloud (fora da Área de Cliente Web).",
@@ -824,9 +826,5 @@
   "domain_dashboard_general_information_domain_automatic": "Renovação automática",
   "domain_dashboard_general_information_alldom_termination_info": "O seu pack expirará a {{ expirationDate }}. Os domínios incluídos que não tenham sido rescindidos serão <strong>renovados gratuitamente até à expiração definitiva do seu pack.</strong> Após essa data, os seus domínios não rescindidos serão faturados individualmente.",
   "domain_dashboard_general_information_alldom_renewal_link": "Anular a rescisão do pack",
-  "domain_dashboard_general_information_alldom_termination_warning_close": "fechar",
-  "domain_contact_owner": "Titular",
-  "domain_configuration_renew": "O seu domínio foi suspenso, mas pode renová-lo durante o período de graça. Decorrido este prazo, serão aplicadas taxas adicionais.",
-  "domain_configuration_restorable": "O seu domínio está a ser eliminado. Pode restaurá-lo, com custos adicionais, através do link «Restaurar». Caso contrário, o domínio será eliminado de forma definitiva.",
-  "domain_configuration_restorable_title_button": "Restaurar"
+  "domain_dashboard_general_information_alldom_termination_warning_close": "fechar"
 }
