--- a/packages/manager/modules/hub/src/components/products/translations/Messages_it_IT.json
+++ b/packages/manager/modules/hub/src/components/products/translations/Messages_it_IT.json
@@ -1,6 +1,5 @@
 {
   "manager_hub_products_ALL_DOM": "Pack AllDom",
-  "manager_hub_products_DEDICATED_ANTHOS_TENANTS": "Anthos Platform",
   "manager_hub_products_CDN_DEDICATED": "CDN",
   "manager_hub_products_CLOUD_PROJECT": "Progetti PCI",
   "manager_hub_products_CLOUD_DB_ENTERPRISE_CLUSTER": "Enterprise Cloud Databases",
@@ -16,6 +15,7 @@
   "manager_hub_products_DOMAIN": "Domini",
   "manager_hub_products_DOMAIN_ZONE": "Zone DNS",
   "manager_hub_products_EMAIL_DOMAIN": "Email",
+  "manager_hub_products_EMAIL_EXCHANGE": "Microsoft Exchange",
   "manager_hub_products_EMAIL_EXCHANGE_SERVICE": "Microsoft Exchange",
   "manager_hub_products_EMAIL_PRO": "Email Pro",
   "manager_hub_products_EXCHANGE": "Microsoft Exchange",
@@ -49,6 +49,7 @@
   "manager_hub_products_MS_SERVICES_SHAREPOINT": "Microsoft SharePoint",
   "manager_hub_products_STORAGE_NETAPP": "Enterprise File Storage",
   "manager_hub_products_NUTANIX": "Nutanix",
+  "manager_hub_products_NETAPP": "NetApp",
   "manager_hub_products_OVH_CLOUD_CONNECT": "OVHcloud Connect",
   "manager_hub_products_OVER_THE_BOX": "OverTheBox",
   "manager_hub_products_PACK_XDSL": "Pack xDSL",
@@ -63,7 +64,5 @@
   "manager_hub_products_WEB_PAA_S_SUBSCRIPTION": "Web PaaS",
   "manager_hub_products_see_less": "Visualizza meno servizi",
   "manager_hub_products_see_more": "Visualizza più servizi",
-  "manager_hub_products_see_all": "Visualizza tutto",
-  "manager_hub_products_NETAPP": "NetApp",
-  "manager_hub_products_EMAIL_EXCHANGE": "Microsoft Exchange"
+  "manager_hub_products_see_all": "Visualizza tutto"
 }
