--- a/packages/manager/modules/hub/src/components/products/translations/Messages_pt_PT.json
+++ b/packages/manager/modules/hub/src/components/products/translations/Messages_pt_PT.json
@@ -1,6 +1,5 @@
 {
   "manager_hub_products_ALL_DOM": "Pack AllDom",
-  "manager_hub_products_DEDICATED_ANTHOS_TENANTS": "Anthos Platform",
   "manager_hub_products_CDN_DEDICATED": "CDN",
   "manager_hub_products_CLOUD_PROJECT": "Projetos PCI",
   "manager_hub_products_CLOUD_DB_ENTERPRISE_CLUSTER": "Enterprise Cloud Databases",
@@ -16,6 +15,7 @@
   "manager_hub_products_DOMAIN": "Nomes de domínio",
   "manager_hub_products_DOMAIN_ZONE": "Zonas DNS",
   "manager_hub_products_EMAIL_DOMAIN": "E-mails",
+  "manager_hub_products_EMAIL_EXCHANGE": "Microsoft Exchange",
   "manager_hub_products_EMAIL_EXCHANGE_SERVICE": "Microsoft Exchange",
   "manager_hub_products_EMAIL_PRO": "E-mails Pro",
   "manager_hub_products_EXCHANGE": "Microsoft Exchange",
@@ -49,6 +49,7 @@
   "manager_hub_products_MS_SERVICES_SHAREPOINT": "Microsoft SharePoint",
   "manager_hub_products_STORAGE_NETAPP": "Enterprise File Storage",
   "manager_hub_products_NUTANIX": "Nutanix",
+  "manager_hub_products_NETAPP": "NetApp",
   "manager_hub_products_OVH_CLOUD_CONNECT": "OVHcloud Connect",
   "manager_hub_products_OVER_THE_BOX": "OverTheBox",
   "manager_hub_products_PACK_XDSL": "Packs xDSL",
@@ -63,7 +64,5 @@
   "manager_hub_products_WEB_PAA_S_SUBSCRIPTION": "Web PaaS",
   "manager_hub_products_see_less": "Ver menos serviços",
   "manager_hub_products_see_more": "Ver mais serviços",
-  "manager_hub_products_see_all": "Ver tudo",
-  "manager_hub_products_NETAPP": "NetApp",
-  "manager_hub_products_EMAIL_EXCHANGE": "Microsoft Exchange"
+  "manager_hub_products_see_all": "Ver tudo"
 }
