--- a/packages/manager/modules/pci/src/components/project/billing/hourly-resource-list/translations/Messages_it_IT.json
+++ b/packages/manager/modules/pci/src/components/project/billing/hourly-resource-list/translations/Messages_it_IT.json
@@ -9,12 +9,11 @@
   "cpbc_volume_detail_title": "Dischi aggiuntivi",
   "cpbc_hourly_instance_trafic_title": "Traffico pubblico in uscita dalle istanze",
   "cpbc_hourly_private_registry_title": "Managed Private Registry",
-  "cpbc_hourly_serving_title": "ML Serving",
   "cpbc_hourly_training_title": "AI Training",
   "cpbc_hourly_notebooks_title": "AI Notebooks",
+  "cpbc_hourly_ai_deploy_title": "AI Deploy",
   "cpbc_hourly_data_processing_title": "Data Processing",
   "cpbc_hourly_databases_title": "Database",
   "cpbc_hourly_floating_ip_title": "Floating IP",
-  "cpbc_hourly_gateway_title": "Gateway",
-  "cpbc_hourly_ai_deploy_title": "AI Deploy"
+  "cpbc_hourly_gateway_title": "Gateway"
 }
