fix(i18n): add missing translations [CDS 2226]
Signed-off-by: CDS Translator Agent <opensource@ovh.net>

--- a/packages/manager/modules/billing/src/orders/purchaseOrders/new-purchase/translations/Messages_pt_PT.json
+++ b/packages/manager/modules/billing/src/orders/purchaseOrders/new-purchase/translations/Messages_pt_PT.json
@@ -16,5 +16,5 @@
   "purchaseOrders_form_add_purchase_submit_REFERENCE_ORDER_success": "A sua referência interna foi criada com êxito!",
   "purchaseOrders_form_add_purchase_submit_PURCHASE_ORDER_success": "O seu purchase order foi criado com êxito!",
   "purchaseOrders_form_add_purchase_submit_error": "Não foi possível tratar o seu pedido. Tente novamente mais tarde.",
-  "purchaseOrders_add_page_warning_ongoing_purchase": "Atualmente, tem uma referência interna ou um purchase order anterior sem data de fim. Não é possível estabelecer uma nova referência sem indicar uma data final sobre a existente."
+  "purchaseOrders_add_page_warning_ongoing_purchase": "Atualmente, tem uma referência interna ou um purchase order anterior sem data de fim. Não é possível introduzir uma nova referência sem indicar uma data de fim sobre a já existente."
 }
