--- a/packages/manager/modules/pci/src/projects/project/data-processing/jobs/job-details/job-dashboard/metrics-token/translations/Messages_it_IT.json
+++ b/packages/manager/modules/pci/src/projects/project/data-processing/jobs/job-details/job-dashboard/metrics-token/translations/Messages_it_IT.json
@@ -1,6 +1,6 @@
 {
   "data_processing_details_metrics_token_modal_title": "Accedi al monitoraggio",
-  "data_processing_details_metrics_token_modal_dismiss_button": "Chiudi",
+  "data_processing_details_metrics_token_modal_dismiss_button": "Chiudere",
   "data_processing_details_metrics_token_modal_description_1": "È possibile accedere alle metriche dettagliate del job via ",
   "data_processing_details_metrics_token_modal_description_2": "Consulta la documentazione",
   "data_processing_details_metrics_token_modal_token_label": "Utilizza il token qui sotto per accedere alle metriche.",
