--- a/packages/manager/modules/pci/src/projects/project/data-processing/jobs/submit-job/spark-sizing/translations/Messages_es_ES.json
+++ b/packages/manager/modules/pci/src/projects/project/data-processing/jobs/submit-job/spark-sizing/translations/Messages_es_ES.json
@@ -16,7 +16,7 @@
   "data_processing_submit_job_stepper_spark_worker_memory_description": "Seleccione la cantidad de memoria por executor",
   "data_processing_submit_job_stepper_spark_worker_memory_overhead_label": "Memoria overhead del executor",
   "data_processing_submit_job_stepper_spark_estimated_price": "Precio estimado: ",
-  "data_processing_submit_job_stepper_spark_free": "Gratuito",
+  "data_processing_submit_job_stepper_spark_free": "Gratis",
   "data_processing_submit_job_stepper_spark_memory_overhead_autocompute_label": "Calcular automáticamente",
   "data_processing_submit_job_stepper_spark_driver_gib": "GiB",
   "data_processing_submit_job_stepper_spark_driver_mib": "MiB"
