--- a/packages/manager/modules/pci/src/projects/project/data-processing/jobs/job-details/job-dashboard/translations/Messages_es_ES.json
+++ b/packages/manager/modules/pci/src/projects/project/data-processing/jobs/job-details/job-dashboard/translations/Messages_es_ES.json
@@ -22,7 +22,7 @@
   "data_processing_details_configuration_jar_file_label": "Archivo JAR",
   "data_processing_details_configuration_python_file_label": "Archivo Python",
   "data_processing_details_configuration_main_class_label": "Clase principal",
-  "data_processing_details_configuration_arguments_label": "Arguments",
+  "data_processing_details_configuration_arguments_label": "Argumentos",
   "data_processing_details_no_data": "No hay datos.",
   "data_processing_details_charts_total_memory": "Utilización de la memoria en los últimos 5 minutos (Mi)",
   "data_processing_details_charts_num_active_tasks": "# de tareas activas en los últimos 5 minutos",
