--- a/packages/manager/modules/pci/src/projects/project/data-processing/jobs/job-details/job-logs/translations/Messages_pl_PL.json
+++ b/packages/manager/modules/pci/src/projects/project/data-processing/jobs/job-details/job-logs/translations/Messages_pl_PL.json
@@ -5,7 +5,7 @@
   "data_processing_details_logs_default_message": "Oczekiwanie na logi...",
   "data_processing_details_logs_swift_link": "w kontenerze obiektów „odp-logi”.",
   "data_processing_details_logs_container_name_label": "Nazwa",
-  "data_processing_details_logs_container_lastModified_label": "Ostatnia zmiana ",
+  "data_processing_details_logs_container_lastModified_label": "Ostatnia modyfikacja",
   "data_processing_details_logs_container_size_label": "Rozmiar",
   "data_processing_details_logs_container_contentType_label": "Typ",
   "data_processing_details_logs_container_download_label": "Pobierz",
