--- a/packages/manager/modules/pci/src/projects/project/data-processing/jobs/job-details/translations/Messages_it_IT.json
+++ b/packages/manager/modules/pci/src/projects/project/data-processing/jobs/job-details/translations/Messages_it_IT.json
@@ -1,4 +1,4 @@
 {
   "data_processing_details_dashboard_label": "Dashboard",
-  "data_processing_details_logs_label": "Logs"
+  "data_processing_details_logs_label": "Log"
 }
