--- a/packages/manager/modules/pci/src/projects/project/data-processing/jobs/terminate-job/translations/Messages_en_GB.json
+++ b/packages/manager/modules/pci/src/projects/project/data-processing/jobs/terminate-job/translations/Messages_en_GB.json
@@ -3,5 +3,5 @@
   "data_processing_terminate_job_description_1": "You are about to stop the job",
   "data_processing_terminate_job_description_2": "You are at risk of losing data that is currently processing.",
   "data_processing_terminate_job_delete_button": "Stop job",
-  "data_processing_terminate_job_cancel_button": "Cancel"
+  "data_processing_terminate_job_cancel_button": "Exit"
 }
