--- a/packages/manager/modules/pci/src/projects/project/data-processing/jobs/terminate-job/translations/Messages_pt_PT.json
+++ b/packages/manager/modules/pci/src/projects/project/data-processing/jobs/terminate-job/translations/Messages_pt_PT.json
@@ -3,5 +3,5 @@
   "data_processing_terminate_job_description_1": "Vai interromper o job",
   "data_processing_terminate_job_description_2": "Poderá perder os dados em curso de tratamento.",
   "data_processing_terminate_job_delete_button": "Interromper o job",
-  "data_processing_terminate_job_cancel_button": "Cancelar"
+  "data_processing_terminate_job_cancel_button": "Anular"
 }
