--- a/packages/manager/modules/pci/src/projects/project/data-processing/notebooks/translations/Messages_pl_PL.json
+++ b/packages/manager/modules/pci/src/projects/project/data-processing/notebooks/translations/Messages_pl_PL.json
@@ -17,7 +17,7 @@
   "data_processing_notebook_status_stopped": "Zatrzymano",
   "data_processing_notebook_status_stopping": "Zatrzymanie",
   "data_processing_notebook_status_unknown": "Nieznany",
-  "data_processing_create_notebook_button_label": "Stwórz notebook",
+  "data_processing_create_notebook_button_label": "Utwórz notebook",
   "data_processing_list_button_notebook_details": "Szczegóły",
   "data_processing_list_button_notebook_start": "Uruchom",
   "data_processing_list_button_notebook_stop": "Zatrzymaj",
